CNI/Cilium/Hostmode/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-web
  template:
    metadata:
      labels:
        app: busybox-web
    spec:
      containers:
        - name: busybox
          image: kube.aradarpanet.ir/busybox:1.28
          command: ["sh", "-c"]
          args:
            - |
              echo "Hello from BusyBox" > /tmp/index.html;
              httpd -f -p 8080 -h /tmp
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: busybox-svc
  namespace: default
spec:
  selector:
    app: busybox-web
  ports:
    - name: http
      port: 80
      targetPort: 8080


---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 8020
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: busybox-route
  namespace: default
spec:
  parentRefs:
    - name: test-gateway
  hostnames:
    - "test.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: busybox-svc
          port: 80
